2006-01-23  Luca Ferretti  <elle.uca@libero.it>

	* 48x48/mimetypes/Makefile.am: remove all entries in icon_DATA, icons
	for MIME types are now under scalable (someone should remove files from
	repository too).

2006-01-23  Luca Ferretti  <elle.uca@libero.it>

	* scalable/devices/Makefile.am:
	* scalable/mimetypes/Makefile.am: tab, not spaces.

2006-01-23  Luca Ferretti  <elle.uca@libero.it>

	* scalable/devices/Makefile.am: add MAINTAINERCLEANFILES and 
	install-data-local rules
	* scalable/mimetypes/Makefile.am: ditto, plus add package-x-generic.svg
	to icons_DATA

2006-01-19  Jakub Steiner <jimmac@ximian.com>

	* mimetypes/Makefile.am: install the icons
	* mimetypes/font-x-generic.svg
	* mimetypes/fonx-x-generic.svg: fix typo
	* mimetypes/gnome-mime-application-x-gnome-saved-search.svg:
		removed. will need to go to icon-naming-utils (linking to
		folder-saved-search)
	* mimetypes/text-html.svg: small tweaks

2006-01-19  Jakub Steiner <jimmac@ximian.com>

	* scalable/mimetypes/application-x-executable.svg
	* scalable/mimetypes/audio-x-generic.svg
	* scalable/mimetypes/fonx-x-generic.svg
	* scalable/mimetypes/image-x-generic.svg
	* scalable/mimetypes/package-x-generic.svg
	* scalable/mimetypes/text-html.svg
	* scalable/mimetypes/text-x-generic.svg
	* scalable/mimetypes/text-x-script.svg
	* scalable/mimetypes/video-x-generic.svg
	* scalable/mimetypes/x-office-address-book.svg
	* scalable/mimetypes/x-office-calendar.svg
	* scalable/mimetypes/x-office-document.svg
	* scalable/mimetypes/x-office-presentation.svg
	* scalable/mimetypes/x-office-spreadsheet.svg: scalable mimetypes

2006-01-18  Jakub Steiner <jimmac@ximian.com>

	* scalable/places/user-trash.svg
	* scalable/status/user-trash-full.svg: alignment/color fixes

2006-01-18  Jakub Steiner <jimmac@ximian.com>

	* document-print: bitmaps for print icon
	
2006-01-17  Luca Ferretti  <elle.uca@libero.it>

	* index.theme.in: fixed a typo in Directories key

2006-01-17  Jakub Steiner <jimmac@ximian.com>
