@@ -104,7 +104,6 @@ scalable/Makefile
 48x48/devices/Makefile
 48x48/emblems/Makefile
 48x48/filesystems/Makefile
-48x48/mimetypes/Makefile
 48x48/places/Makefile
 48x48/status/Makefile
 48x48/stock/Makefile
