@@ -1,3 +1,9 @@
+2006-02-01  Rodney Dawes  <dobey@novell.com>
+
+	* configure.in: Remove 48x48/mimetypes/Makefile from AC_CONFIG_FILES
+
+	* 48x48/mimetypes: Remove these icons
+
 2006-01-23  Luca Ferretti  <elle.uca@libero.it>
 
 	* 48x48/mimetypes/Makefile.am: remove all entries in icon_DATA, icons
